# plottk

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  make-test-data.py  pyproject.toml  requirements_dev.txt  tags  test-config.toml  test-data.csv  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
plottk/: keys.py  managers.py
plottk/transformations/: __init__.py  filtering.py  normalization.py  poi.py  standardization.py
plottk/utils/: __init__.py  deepget.py  registry.py  toml.py
src/plottk/: __init__.py  cli.py  config.py  plotting.py  utils.py
test-qfix/: dataconfig.overcooked-3.toml  dataconfig.overcooked.toml  dataconfig.smacv2-ablation.return.toml  dataconfig.smacv2.return.toml  dataconfig.smacv2.winrate.toml  flags.aggregate.toml  flags.interquantile.toml  flags.toml  managers.py  plot.qfix.overcooked-3.py  plot.qfix.overcooked.py  plot.qfix.sh  plot.qfix.smacv2-ablation.return-iqm.aggregate.py  plot.qfix.smacv2-ablation.return-mean.aggregate.py  plot.qfix.smacv2-ablation.return-mean.py  plot.qfix.smacv2.poi.py  plot.qfix.smacv2.return-iqm.aggregate.py  plot.qfix.smacv2.return-mean.aggregate.py  plot.qfix.smacv2.return-mean.py  plot.qfix.smacv2.winrate-iqm.aggregate.py  plot.qfix.smacv2.winrate-mean.aggregate.py  plot.qfix.smacv2.winrate-mean.py  plotconfig.color-order.overcooked.toml  plotconfig.color-order.smacv2-ablation.toml  plotconfig.color-order.smacv2.toml  plotconfig.color.toml  plotconfig.facet.overcooked-3.toml  plotconfig.facet.overcooked.toml  plotconfig.facet.smacv2-ablation.toml  plotconfig.facet.smacv2.toml  plotconfig.xlimit.smacv2.toml  plotconfig.ylimit.overcooked-3.toml  plotconfig.ylimit.overcooked.normalized.toml  plotconfig.ylimit.overcooked.toml  plotconfig.ylimit.smacv2.return.normalized.toml  plotconfig.ylimit.smacv2.return.toml  plotconfig.ylimit.smacv2.winrate.toml  shared.py
test-role-of-state/: dataconfig.heavenhell-3.toml  dataconfig.heavenhell-4.toml  managers.py  plot.heavenhell-3.py  plot.heavenhell-4.py  plot.sh  plotconfig.color-order.heavenhell.toml  plotconfig.color.toml  plotconfig.relabel-legend.toml  plotconfig.statistics.toml  plotconfig.xlimit.heavenhell-3.toml  plotconfig.ylimit.heavenhell.toml  shared.py
tests/: test_plottk.py
