[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plottk"
version = "0.1.0"
description = "Plotting ToolKit"
readme = "README.rst"
authors = [
  {name = "Andrea Baisero", email = "andrea.baisero@gmail.com"}
]
maintainers = [
  {name = "Andrea Baisero", email = "andrea.baisero@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "matplotlib",
  "pandas",
  "pydantic",
  "seaborn",
  "typer"
]

[project.scripts]
plottk = "plottk.cli:app"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/abaisero/plottk/issues"
changelog = "https://github.com/abaisero/plottk/blob/master/changelog.md"
homepage = "https://github.com/abaisero/plottk"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
